--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "4.5.0",
+    "@vue/cli-plugin-eslint": "4.5.0",
+    "@vue/cli-service": "4.5.0",
     "element-ui": "^2.15.6",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "esri-loader": "^3.5.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-router": "^3.5.3",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "3.6.2"
   },
   "eslintConfig": {
     "root": true,
